Fix overflow bugs.

--- a/static/demo.css
+++ b/static/demo.css
@@ -4,12 +4,12 @@ body{
 }
 
 .content-page{
-    height: 600px;
-    max-height: 600px;
+
 }
 
 .page-main{
-    height: 95%;
+    min-height: 600px;
+    overflow: auto;
 }
 
 .nav-item a:hover{
